# squirrel_common

./: .gitignore  .travis.yml  README.md
robotino_description/: CHANGELOG.rst  package.xml
robotino_description/meshes/: base_shell_collision.stl  base_shell_front_collision.stl  base_shell_front_collision_real.stl  cover.stl  door.stl  door_collision.stl  neck.stl
robotino_description/urdf/: arm.urdf.xacro  base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro  base_plan.urdf.xacro  base_plan_sh.urdf.xacro  base_shell.urdf.xacro  gazebo.urdf.xacro  hokuyo.urdf.xacro  kclhand_withCableCanal.urdf.xacro  kclhand_withCableCanalTUW.urdf.xacro  robotino_body.urdf.xacro  shell.urdf.xacro
robotino_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotino_msgs/srv/: ClearFixation.srv  FixatePanTilt.srv  FixatePosition.srv  LookAtPanTilt.srv  LookAtPosition.srv
soft_hand_description/: CMakeLists.txt  package.xml
soft_hand_description/model/: soft_hand.urdf.xacro  soft_hand_fixed.urdf.xacro  softhand_withCableCanal.urdf.xacro
softhand_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
softhand_description/meshes/: robotino_softhand_adapter.stl  robotino_softhand_adapter_scaled.stl  wrist.stl
softhand_description/model/: soft_hand.inertia.xacro  soft_hand.urdf.xacro  soft_hand_fixed.urdf.xacro  softhand_withCableCanal.urdf.xacro
softhand_description/model/accesories/: clamp.urdf.xacro  kuka_coupler.urdf.xacro  softhand_base.urdf.xacro
squirrel_2d_localizer_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_2d_localizer_msgs/srv/: GlobalLocalization.srv
squirrel_3d_localizer_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_3d_localizer_msgs/srv/: SetMap.srv  ToggleSensors.srv
squirrel_3d_mapping_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_3d_mapping_msgs/msg/: OctomapUpdate.msg
squirrel_common/: CHANGELOG.rst  package.xml
squirrel_dynamic_filter_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_dynamic_filter_msgs/msg/: CloudMsg.msg  DynamicFilterMsg.msg
squirrel_dynamic_filter_msgs/srv/: ClassifyStaticSrv.srv  DynamicFilterSrv.srv
squirrel_footprint_observer_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_footprint_observer_msgs/srv/: dump_footprint.srv
squirrel_hri_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_hri_msgs/action/: FollowChild.action
squirrel_hri_msgs/msg/: Expression.msg
squirrel_kclhand_msgs/: CHANGELOG.rst  package.xml
squirrel_localizer_msgs/: CHANGELOG.rst  package.xml
squirrel_manipulation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_manipulation_msgs/action/: BlindGrasp.action  GraspAction.action  HAFGrasp.action  Handover.action  JointPtp.action  Manipulation.action  Ptp.action  PutDown.action  Smash.action
squirrel_manipulation_msgs/msg/: Grasp.msg
squirrel_manipulation_msgs/srv/: GraspImport.srv  SoftHandGrasp.srv
squirrel_mhand_msgs/: CHANGELOG.rst  package.xml
squirrel_motion_planner_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_motion_planner_msgs/srv/: FoldArm.srv  PlanEndEffector.srv  PlanPose.srv  SendControlCommand.srv  UnfoldArm.srv
squirrel_nav_msgs/: CMakeLists.txt  package.xml
squirrel_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_navigation_msgs/msg/: CellMSG.msg  ObjectBufferMSG.msg  ObjectMSG.msg  ScanSafetyObservation.msg
squirrel_navigation_msgs/srv/: BrakeRobot.srv  ClearCostmapRegion.srv  ClutterInfo.srv  ClutterPlanner.srv  GetObstaclesMap.srv  (+2 more)
squirrel_object_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_object_perception_msgs/action/: FindLumps.action  GraspObject.action  LookForObjects.action  RecognizeObjects.action
squirrel_object_perception_msgs/msg/: BBox.msg  BCylinder.msg  Classification.msg  DynamicObject.msg  LumpToDB.msg  ObjectToDB.msg  SceneObject.msg  StampedDynamicObject.msg
squirrel_object_perception_msgs/srv/: ActiveExplorationNBV.srv  CheckGraspSuccess.srv  CheckWaypoint.srv  CoveragePlan.srv  CoveragePlanFile.srv  CreateOctomapWithLumps.srv  FindDynamicObjects.srv  FixatePanTilt.srv  GetSaliency3DSymmetry.srv  GetSaliencyHeight.srv  GetSaliencyLocation.srv  GetSaliencySurfaceOrientation.srv  GetSaliencySymmetry.srv  LookAtImagePosition.srv  LookAtPanTilt.srv  LookAtPosition.srv  ReceiveOctomapWithLumps.srv  Recognize.srv  Recognize2d.srv  SegmentOnce.srv  StartInstanceTracking.srv  StartLumpTracking.srv  StartObjectTracking.srv  StartRobotTracking.srv  StopInstanceTracking.srv  StopLumpTracking.srv  StopObjectTracking.srv  StopRobotTracking.srv
squirrel_person_tracker_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_planning_knowledge_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_planning_msg/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_planning_msg/srv/: CallAction.srv
squirrel_prediction_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_prediction_msgs/srv/: RecommendAction.srv  RecommendRelations.srv
squirrel_rgbd_mapping_msgs/: CHANGELOG.rst  package.xml
squirrel_safety_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_safety_msgs/msg/: Safety.msg
squirrel_sketch_interface_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_sketch_interface_msgs/msg/: MetricStamped.msg
squirrel_sketch_interface_msgs/srv/: PathStartAndGoal.srv
squirrel_speech_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_speech_msgs/msg/: RecognizedCommand.msg  RecognizedSpeech.msg
squirrel_vad_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_vad_msgs/msg/: RecognisedResult.msg  vad.msg
squirrel_view_controller_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_view_controller_msgs/action/: FixateOnPose.action
squirrel_view_controller_msgs/srv/: ClearFixation.srv  FixatePosition.srv  LookAtImagePosition.srv  LookAtPanTilt.srv  LookAtPosition.srv
squirrel_waypoint_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
squirrel_waypoint_msgs/srv/: ExamineWaypoint.srv  ManipulationWaypointService.srv
(+24 files in other folders)
