<?xml version="1.0"?>
<package>
  <name>soft_hand_description</name>
  <version>0.0.0</version>
  <description>The soft_hand_description package</description>

  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>
  <license>GPLv2</license>

  <author>Philipp Zech</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
