<?xml version="1.0"?>
<package>
  <name>squirrel_3d_localizer_msgs</name>
  <version>0.0.20</version>
  <description>Messages for squirrel_3d_localizer package</description>

  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export/>

</package>
