<package>

  <name>squirrel_common</name>
  <version>0.0.20</version>
  <description>Definitions for mesages, services and actions. Startup packages for the robots</description>
  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotino_description</run_depend>
  <run_depend>robotino_msgs</run_depend>
  <run_depend>squirrel_3d_localizer_msgs</run_depend>
  <run_depend>squirrel_3d_mapping_msgs</run_depend>
  <run_depend>squirrel_kclhand_msgs</run_depend>
  <run_depend>squirrel_localizer_msgs</run_depend>
  <run_depend>squirrel_manipulation_msgs</run_depend>
  <run_depend>squirrel_mhand_msgs</run_depend>
  <run_depend>squirrel_navigation_msgs</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <run_depend>squirrel_person_tracker_msgs</run_depend>
  <run_depend>squirrel_planning_knowledge_msgs</run_depend>
  <run_depend>squirrel_prediction_msgs</run_depend>
  <run_depend>squirrel_rgbd_mapping_msgs</run_depend>
  <run_depend>squirrel_sketch_interface_msgs</run_depend>
  <run_depend>squirrel_speech_msgs</run_depend>
  <run_depend>squirrel_vad_msgs</run_depend>
  <run_depend>squirrel_waypoint_msgs</run_depend>
  <run_depend>squirrel_hri_msgs</run_depend>

  <export>
	<metapackage/>
  </export>

</package>
