<?xml version="1.0"?>
<package>
  <name>squirrel_dynamic_filter_msgs</name>
  <version>0.0.26</version>
  <description>Messages for the squirrel_dynamic_filter package</description>

  <maintainer email="dewan@cs.uni-freiburg.de">Ayush Dewan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
