<?xml version="1.0"?>
<package>
  <name>squirrel_footprint_observer_msgs</name>
  <version>0.0.25</version>
  <description>The squirrel_footprint_observer_msgs package</description>

  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>

  <license>GPL-v3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>geometry_msgs</run_depend> 
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
