<?xml version="1.0"?>
<package>
  <name>squirrel_mhand_msgs</name>
  <version>0.0.20</version>
  <description>Provides message definitions</description>

  <maintainer email="evangelos.emmanouil@kcl.ac.uk">Evangelos Emmanouil</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
