<?xml version="1.0"?>
<package>
  <name>squirrel_planning_msgs</name>
  <version>0.0.33</version>
  <description>Messages, actions and services for planning</description>
  <maintainer email="bram.ridder@gmail.com">Bram Ridder</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

</package>
