<?xml version="1.0"?>
<package>
  <name>squirrel_prediction_msgs</name>
  <version>0.0.1</version>
  <description>Services for predicting and recommending missing data</description>
  <maintainer email="senka.krivic@uibk.ac.at">michael</maintainer>
  <license>BSD</license>
  <url type="website">http://www.squirrel-project.eu</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export></export>
</package>
