<?xml version="1.0"?>
<package>
  <name>squirrel_safety_msgs</name>
  <version>0.0.26</version>
  <description>The squirrel_safety_msgs package</description>

  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>

  <license>BSD</license>

  <author email="philipp.zech@uibk.ac.at">Philipp Zech</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
