<?xml version="1.0"?>
<package>
  <name>squirrel_sketch_interface_msgs</name>
  <version>0.0.26</version>
  <description>Messages for the squirrel_sketch_interface package</description>
  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>

  <license>BSD</license>
  <author>Federico Boniardi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
