<?xml version="1.0"?>
<package>
  <name>squirrel_speech_msgs</name>
  <version>0.0.21</version>
  <description>The squirrel_speech_rec message package</description>

  <maintainer email="florian.voigtlaender@festo.com"> Florian Voigtländer </maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
