<?xml version="1.0"?>
<package>
  <name>squirrel_vad_msgs</name>
  <version>0.0.24</version>
  <description>The squirrel_vad_msgs package</description>

  <maintainer email="j.kim@utwente.nl">Jaebok Kim</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
