<?xml version="1.0"?>
<package>
  <name>squirrel_view_controller_msgs</name>
  <version>0.0.26</version>
  <description>Message defintions for the viewcontroller(pan/tilt) on the Squirrel robot</description>

  <maintainer email="bajones@acin.tuwien.ac.at">Markus Bajones</maintainer>
  <author email="bajones@acin.tuwien.ac.at">Markus Bajones</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
