<?xml version="1.0"?>
<package>
  <name>squirrel_waypoint_msgs</name>
  <version>0.0.20</version>
  <description>Messages, actions and services for creating waypoints for the planner</description>
  <maintainer email="langer@acin.tuwien.ac.at">Edith Langer</maintainer>
  <license>BSD</license>
  <url type="website">http://www.squirrel-project.eu</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>squirrel_object_perception_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>


</package>
